--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "^11.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-masonry-css": "^1.0.16",
     "theme-ui": "^0.11.1"
   }
 }
