--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   },
   "dependencies": {
     "@mdx-js/loader": "^1.6.22",
-    "@next/mdx": "^11.1.0",
-    "next": "^11.1.0",
+    "@next/mdx": "^11.1.2",
+    "next": "^11.1.2",
     "react": "^17.0.2",
+    "react-confetti": "^6.0.1",
     "react-dom": "^17.0.2",
     "react-masonry-css": "^1.0.16",
     "theme-ui": "^0.11.1"
